feat(ci): adicionando pipeline de testes automatizados com GitHub Actions